# Cloud-Blender-Render

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  cycle_optix_denoise_logic.py  cycles_optix_denoise_logic.py  package-lock.json  start.sh  watch_extensions.sh
frontend/: index.html  package-lock.json  package.json  style.js  vite.config.js
frontend/public/: service-worker.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/assets/illustrator/: Cloud Blender Render Logo.ai
frontend/src/component/: Animationtype.jsx  Chartdata.jsx  Controlpanel.jsx  Enginetype.jsx  ExtensionUpload.jsx  Filebrowser.jsx  Fileinput.jsx  Footer.jsx  Gputerminal.jsx  Home.jsx  Imagepreview.jsx  Navbar.jsx  Notification.jsx  Preloader.jsx  Settings.jsx  Socket.jsx  Store.jsx  deleteRenderedFrames.jsx
frontend/src/style/: Enginetype.css  animationtype.css  controlpanel.css  deleteRenderedFrames.css  enginetype.css  extensionupload.css  filebrowser.css  fileinput.css  footer.css  gputerminal.css  home.css  imagepreview.css  navbar.css  notification.css  preloader.css  settings.css  toggleswitch.css
src/: app_state_schema.rs  auth.rs  delete_blend_file.rs  delete_rendered_frames.rs  get_blend_file.rs  live_gpu_stats.rs  live_image_preview.rs  live_render_stats.rs  machine_lookup.rs  main.rs  process_blend_file.rs  render_image_list.rs  upload_blend_file.rs  upload_extension_file.rs  web_push_notification.rs
src/db/: app_state_schema.rs  get_app_state.rs  mod.rs
