[package]
name = "Blender-Remote-Render"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.3", features = ["multipart"] }
axum_typed_multipart = "0.15.1"
base64 = "0.22.1"
file-format = "0.26.0"
image2 = "1.9.2"
notify = { version = "8.0.0", features = ["serde"] }
once_cell = "1.21.3"
redis = { version = "0.30.0", features = ["json"] }
regex = "1.11.1"
sanitize-filename = "0.6.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
shared_child = "1.0.2"
socketioxide = { version = "0.16.2", features = ["state"] }
tempfile = "3.19.1"
tokio = { version = "1.44.2", features = ["full"] }
