[package]
name = "Cloud-Blender-Render"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.3", features = ["multipart"] }
axum-extra = { version = "0.10.1", features = ["cookie"] }
axum_typed_multipart = "0.15.1"
base64 = "0.22.1"
cookie = "0.18.1"
file-format = "0.26.0"
http = "1.3.1"
image2 = { version = "1.9.2", default-features = false, features = ["magick"] }
include_dir = "0.7.4"
nanoid = "0.4.0"
netdev = "0.35.2"
nix = { version = "0.30.1", features = ["signal"] }
notify = { version = "8.0.0", features = ["serde"] }
nvml-wrapper = "0.11.0"
redis = { version = "0.30.0", features = ["json"] }
regex = "1.11.1"
sanitize-filename = "0.6.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
socketioxide = { version = "0.16.2", features = ["state"] }
sysinfo = "0.35.2"
tempfile = "3.19.1"
tokio = { version = "1.44.2", features = ["full"] }
tower-http = { version = "0.6.4", features = ["cors", "fs"] }
